[project]
name = "advent-of-code-2024"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "pytest>=9.0.1",
    "ruff>=0.14.8",
]

[tool.pytest]
markers = ["slow: skip slow tests"]

[dependency-groups]
dev = [
    "mypy>=1.19.0",
    "ty>=0.0.1a31",
]

[tool.ruff.lint]
ignore = [
  # I find `l` to be a fine name if used carefully:
  "E741"
]
